--- a/821b.EstrattoConto/customerstatement821b.jrxml
+++ b/821b.EstrattoConto/customerstatement821b.jrxml
@@ -15,7 +15,7 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="mm"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="iDempiere"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="iDempiere Produzione"/>
 	<style name="Style1"/>
 	<parameter name="C_BPartner_ID" class="java.lang.Integer"/>
 	<parameter name="DateAcctFrom" class="java.util.Date"/>
@@ -368,7 +368,7 @@ $V{grandtotal1}.add($V{allocationamt1})]]></variableExpression>
 		<variableExpression><![CDATA[$F{grandtotal}==null?new BigDecimal(0):$F{grandtotal}]]></variableExpression>
 	</variable>
 	<variable name="Variable_1_2_1" class="java.math.BigDecimal" calculation="Sum">
-		<variableExpression><![CDATA[$F{allocationamt}]]></variableExpression>
+		<variableExpression><![CDATA[$F{name}.equals("prepaid")?$F{allocationamt}.abs():$F{allocationamt}]]></variableExpression>
 	</variable>
 	<group name="BPartner" isStartNewPage="true" isReprintHeaderOnEachPage="true">
 		<groupExpression><![CDATA[$F{c_bpartner_id}]]></groupExpression>
@@ -530,7 +530,7 @@ $V{grandtotal1}.add($V{allocationamt1})]]></variableExpression>
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="34">
+			<band height="38">
 				<frame>
 					<reportElement x="250" y="5" width="304" height="29" uuid="d54eafa3-395b-42f1-aa83-7d514bfc1916">
 						<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.grid.JSSGridBagLayout"/>
@@ -615,7 +615,8 @@ $V{grandtotal1}.add($V{allocationamt1})]]></variableExpression>
 						<textElement textAlignment="Right" verticalAlignment="Middle">
 							<font fontName="SansSerif" size="10" isBold="true"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$V{Pagamenti_2_g_Report} == null ? 0 : $V{Pagamenti_2_g_Report}]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$V{Pagamenti_2_g_Report} == null ? 0 : $V{Variable_1_2_1}
+]]></textFieldExpression>
 					</textField>
 					<staticText>
 						<reportElement key="textField" positionType="Float" mode="Opaque" x="203" y="1" width="101" height="14" forecolor="#FFFFFF" backcolor="#2147ED" uuid="1d3e891b-dd2d-49e9-abd9-582912d42b54">
@@ -658,7 +659,8 @@ $V{grandtotal1}.add($V{allocationamt1})]]></variableExpression>
 						<textElement textAlignment="Right" verticalAlignment="Middle">
 							<font fontName="SansSerif" size="10" isBold="true"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$V{Pagamenti_2_g_Report}==null?$V{GrandTotal_SaldoFinale}:$V{Totale_Documenti}.add($V{Pagamenti_2_g_Report})]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$V{Pagamenti_2_g_Report}==null?$V{Totale_Documenti}:$V{Totale_Documenti}.add($V{Variable_1_2_1})
+]]></textFieldExpression>
 					</textField>
 				</frame>
 			</band>
@@ -720,7 +722,7 @@ $V{grandtotal1}.add($V{allocationamt1})]]></variableExpression>
 						<textElement verticalAlignment="Middle">
 							<font fontName="SansSerif" size="10" isBold="true"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$F{name}=="prepaid" ? $P{RESOURCE}.getString("Prepaid_"+$F{ad_language}) :$F{name}]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$F{name}.equals("prepaid") ?"PREPAGAMENTO" :$F{name}]]></textFieldExpression>
 					</textField>
 					<textField textAdjust="ScaleFont" pattern="dd-MM-yyyy" isBlankWhenNull="true">
 						<reportElement x="-2" y="0" width="70" height="16" forecolor="#A30303" uuid="d795050a-1aa9-4354-989a-f3aa6bdab1b9"/>
@@ -1020,7 +1022,7 @@ $V{grandtotal1}.add($V{allocationamt1})]]></variableExpression>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
 						<font fontName="SansSerif" size="10" isBold="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$V{Variable_1_2}.add($V{Variable_1_2_1})]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{name}.equals("prepaid")?$V{Variable_1_2}.add($V{Variable_1_2_1}):$V{Variable_1_2}.add($V{Variable_1_2_1})]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
