--- a/821b.EstrattoConto/customerstatement821b.jrxml
+++ b/821b.EstrattoConto/customerstatement821b.jrxml
@@ -15,7 +15,7 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="mm"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="iDempiere Produzione"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="iDempiere"/>
 	<style name="Style1"/>
 	<parameter name="C_BPartner_ID" class="java.lang.Integer"/>
 	<parameter name="DateAcctFrom" class="java.util.Date"/>
@@ -72,14 +72,14 @@ doc.docbasetype,
 	  */
 inv.DESCRIPTION,
 CASE WHEN doc.docbasetype IN ('ARC','API') THEN
-	inv.GRANDTOTAL *-1
+	inv.GRANDTOTAL
 ELSE
 	inv.GRANDTOTAL
 END AS "grandtotal",
 pay.payamt as payamt,
 --abb.amount - abb.overunderamt as payamt,
 CASE WHEN doc.docbasetype IN ('ARC','API') THEN
-  abb.Amount *-1
+  abb.Amount
 ELSE
   abb.Amount*-1
 END as AllocationAmt,
@@ -310,9 +310,6 @@ order by "BPARTNER",datetrx,documentno]]>
 	<sortField name="datetrx"/>
 	<sortField name="documentno"/>
 	<sortField name="paymentdate"/>
-	<variable name="Totale_Documenti" class="java.math.BigDecimal" resetType="Group" resetGroup="BPartner" incrementType="Group" incrementGroup="Documentno" calculation="Sum">
-		<variableExpression><![CDATA[$F{grandtotal}]]></variableExpression>
-	</variable>
 	<variable name="Pagamenti_2_g_Report" class="java.math.BigDecimal" resetType="Group" resetGroup="BPartner" calculation="Sum">
 		<variableExpression><![CDATA[$F{allocationamt}]]></variableExpression>
 	</variable>
@@ -334,22 +331,24 @@ order by "BPARTNER",datetrx,documentno]]>
 		<variableExpression><![CDATA[//$V{allocationamt1}==null? new BigDecimal(0):$V{grandtotal1}.add($V{allocationamt1})
 $V{grandtotal1}.add($V{allocationamt1})]]></variableExpression>
 	</variable>
+	<variable name="Totale_Documenti" class="java.math.BigDecimal" incrementType="Group" incrementGroup="Documentno" calculation="Sum">
+		<variableExpression><![CDATA[$F{grandtotal}]]></variableExpression>
+	</variable>
 	<variable name="Variable_1_2" class="java.math.BigDecimal" incrementType="Group" incrementGroup="Documentno" calculation="Sum">
 		<variableExpression><![CDATA[$F{grandtotal}==null?new BigDecimal(0):$F{grandtotal}]]></variableExpression>
 	</variable>
 	<variable name="Variable_1_2_1" class="java.math.BigDecimal" calculation="Sum">
-		<variableExpression><![CDATA[//$F{name}.equals("prepaid")?$F{allocationamt}.abs():$F{allocationamt}
-$F{name}=="prepaid"?$F{allocationamt}.abs():$F{allocationamt}]]></variableExpression>
+		<variableExpression><![CDATA[$F{name}=="prepaid"?$F{allocationamt}:$F{allocationamt}]]></variableExpression>
 	</variable>
-	<variable name="Variable_1_2_1_1" class="java.math.BigDecimal" resetType="None" calculation="Sum">
-		<variableExpression><![CDATA[$F{payamt}]]></variableExpression>
+	<variable name="Variable_1_2_1_1" class="java.math.BigDecimal" calculation="Sum">
+		<variableExpression><![CDATA[$F{name}.equals("prepaid")?$F{payamt}:$F{payamt}]]></variableExpression>
 	</variable>
-	<group name="BPartner" isStartNewPage="true" isReprintHeaderOnEachPage="true">
+	<group name="BPartner" isStartNewPage="true" isReprintHeaderOnEachPage="true" keepTogether="true" preventOrphanFooter="true">
 		<groupExpression><![CDATA[$F{c_bpartner_id}]]></groupExpression>
 		<groupHeader>
 			<band height="73" splitType="Stretch">
 				<subreport>
-					<reportElement key="" positionType="Float" x="0" y="45" width="555" height="15" uuid="2515d8c4-d2f0-432e-98a0-c4d0c26c9686">
+					<reportElement key="" positionType="Float" x="0" y="45" width="555" height="15" isRemoveLineWhenBlank="true" uuid="2515d8c4-d2f0-432e-98a0-c4d0c26c9686">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 						<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					</reportElement>
@@ -504,7 +503,7 @@ $F{name}=="prepaid"?$F{allocationamt}.abs():$F{allocationamt}]]></variableExpres
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="71">
+			<band height="34">
 				<frame>
 					<reportElement x="250" y="5" width="304" height="29" uuid="d54eafa3-395b-42f1-aa83-7d514bfc1916">
 						<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.grid.JSSGridBagLayout"/>
@@ -633,28 +632,24 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 						<textElement textAlignment="Right" verticalAlignment="Middle">
 							<font fontName="SansSerif" size="10" isBold="true"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$V{Pagamenti_2_g_Report}==null?$V{Totale_Documenti}:$V{Totale_Documenti}.add($V{Variable_1_2_1})]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$V{Pagamenti_2_g_Report}==null?$V{Variable_1_2}:$V{Variable_1_2}.add($V{Variable_1_2_1})]]></textFieldExpression>
 					</textField>
 				</frame>
-				<textField>
-					<reportElement x="15" y="35" width="100" height="30" uuid="d211c2f2-40d5-4d13-ab4d-079906eea784"/>
-					<textFieldExpression><![CDATA[$V{Variable_1_2_1_1}]]></textFieldExpression>
-				</textField>
 			</band>
 		</groupFooter>
 	</group>
-	<group name="Documentno">
+	<group name="Documentno" keepTogether="true" preventOrphanFooter="true">
 		<groupExpression><![CDATA[$F{documentno}]]></groupExpression>
 		<groupHeader>
-			<band height="16">
+			<band height="12" splitType="Stretch">
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
 				<printWhenExpression><![CDATA[!$F{name}.equals("prepaid")]]></printWhenExpression>
 				<frame>
-					<reportElement x="0" y="0" width="555" height="16" forecolor="#A30303" uuid="72b06c80-13c1-4365-af5c-6577e99d18b0"/>
+					<reportElement x="0" y="0" width="555" height="12" isRemoveLineWhenBlank="true" forecolor="#A30303" uuid="72b06c80-13c1-4365-af5c-6577e99d18b0"/>
 					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="0"/>
 					<textField textAdjust="ScaleFont" pattern="" isBlankWhenNull="true">
-						<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="238" y="0" width="125" height="16" forecolor="#A30303" uuid="fa04fc64-763b-4278-b262-f8548907f1de">
+						<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="238" y="0" width="125" height="12" forecolor="#A30303" uuid="fa04fc64-763b-4278-b262-f8548907f1de">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 						</reportElement>
 						<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
@@ -670,7 +665,7 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 						<textFieldExpression><![CDATA[T($F{documentno})]]></textFieldExpression>
 					</textField>
 					<textField textAdjust="ScaleFont" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
-						<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="363" y="0" width="95" height="16" forecolor="#A30303" uuid="00fdfd03-bc9b-4126-bfbd-528d1de813a2">
+						<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="363" y="0" width="95" height="12" forecolor="#A30303" uuid="00fdfd03-bc9b-4126-bfbd-528d1de813a2">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 						</reportElement>
@@ -687,7 +682,7 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 						<textFieldExpression><![CDATA[$F{grandtotal}]]></textFieldExpression>
 					</textField>
 					<textField textAdjust="ScaleFont">
-						<reportElement positionType="Float" x="68" y="0" width="170" height="16" forecolor="#A30303" uuid="fa49bc50-5017-4373-a5e4-37efaa99d322">
+						<reportElement positionType="Float" x="68" y="0" width="170" height="12" forecolor="#A30303" uuid="fa49bc50-5017-4373-a5e4-37efaa99d322">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 						</reportElement>
 						<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
@@ -699,10 +694,10 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 						<textElement verticalAlignment="Middle">
 							<font fontName="SansSerif" size="8" isBold="true"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$F{name}==("prepaid") ?T("SALDO RESIDUO") :$F{name}]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$F{name}.equals(("prepaid")) ?T("SALDO RESIDUO") :$F{name}]]></textFieldExpression>
 					</textField>
 					<textField textAdjust="ScaleFont" pattern="dd-MM-yyyy" isBlankWhenNull="true">
-						<reportElement x="-2" y="0" width="70" height="16" forecolor="#A30303" uuid="d795050a-1aa9-4354-989a-f3aa6bdab1b9"/>
+						<reportElement x="-2" y="0" width="70" height="12" forecolor="#A30303" uuid="d795050a-1aa9-4354-989a-f3aa6bdab1b9"/>
 						<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 							<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 							<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -715,7 +710,7 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 						<textFieldExpression><![CDATA[$F{datetrx}]]></textFieldExpression>
 					</textField>
 					<textField textAdjust="ScaleFont" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
-						<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="458" y="0" width="94" height="16" forecolor="#A30303" uuid="e1ba440a-116f-4633-aefc-41bf7d22839e">
+						<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="458" y="0" width="95" height="12" forecolor="#A30303" uuid="e1ba440a-116f-4633-aefc-41bf7d22839e">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 						</reportElement>
@@ -735,16 +730,17 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="8">
+			<band height="1">
 				<frame>
-					<reportElement mode="Transparent" x="0" y="0" width="555" height="2" backcolor="#F7F7F7" uuid="6e11d96d-1ac9-4824-811a-c8e4119c543b">
+					<reportElement mode="Transparent" x="0" y="0" width="555" height="1" backcolor="#F7F7F7" uuid="6e11d96d-1ac9-4824-811a-c8e4119c543b">
 						<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
+						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
-						<pen lineWidth="0.5" lineColor="#FF0400"/>
+						<pen lineWidth="0.25" lineColor="#FF0400"/>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="2.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<staticText>
@@ -920,45 +916,13 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="20" splitType="Stretch">
+		<band height="12" splitType="Stretch">
 			<printWhenExpression><![CDATA[$F{allocationamt}!=null]]></printWhenExpression>
 			<frame>
-				<reportElement x="0" y="0" width="555" height="20" forecolor="#2B05FF" uuid="03f95c77-dc20-450a-a234-5f147aa7f065"/>
+				<reportElement x="0" y="0" width="555" height="12" isRemoveLineWhenBlank="true" forecolor="#2B05FF" uuid="03f95c77-dc20-450a-a234-5f147aa7f065"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="0"/>
-				<textField textAdjust="ScaleFont" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="363" y="0" width="95" height="20" forecolor="#2B05FF" uuid="16d376c0-ce90-44df-abc9-64c65473ffea">
-						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="46f7af20-3217-48ff-8c73-9e211d64ce8d"/>
-						<property name="com.jaspersoft.studio.unit.height" value="px"/>
-					</reportElement>
-					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
-						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					</box>
-					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font fontName="SansSerif" size="8" isBold="true"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{name}.equals("prepaid")?$F{allocationamt}.abs():$F{allocationamt}]]></textFieldExpression>
-				</textField>
-				<textField textAdjust="ScaleFont">
-					<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="68" y="0" width="90" height="20" forecolor="#2B05FF" uuid="ffc9aa24-a555-4801-89ce-c845525e5dd7">
-						<property name="com.jaspersoft.studio.unit.height" value="px"/>
-					</reportElement>
-					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
-						<pen lineWidth="0.25"/>
-						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					</box>
-					<textElement verticalAlignment="Middle">
-						<font fontName="SansSerif" size="8" isBold="true"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{paymentdoc}== null ? T("ABBINAMENTO") : $F{name}==("prepaid") ?T("PAGAMENTO NON ALLOCATO") : $F{paymentdoc}]]></textFieldExpression>
-				</textField>
 				<textField textAdjust="ScaleFont" pattern="dd-MM-yyyy" isBlankWhenNull="true">
-					<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="-2" y="0" width="70" height="20" forecolor="#2B05FF" uuid="69f8275c-3a01-416f-a02e-ca37417a1b3c">
+					<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="-2" y="0" width="70" height="12" forecolor="#2B05FF" uuid="69f8275c-3a01-416f-a02e-ca37417a1b3c">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
@@ -973,9 +937,24 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 					</textElement>
 					<textFieldExpression><![CDATA[$F{paymentdate}]]></textFieldExpression>
 				</textField>
+				<textField textAdjust="ScaleFont">
+					<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="68" y="0" width="90" height="12" forecolor="#2B05FF" uuid="ffc9aa24-a555-4801-89ce-c845525e5dd7"/>
+					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
+						<pen lineWidth="0.25"/>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement verticalAlignment="Middle">
+						<font fontName="SansSerif" size="8" isBold="true"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{paymentdoc}== null ? T("ABBINAMENTO") : $F{name}==("prepaid") ?T("PAGAMENTO NON ALLOCATO") : $F{paymentdoc}]]></textFieldExpression>
+				</textField>
 				<textField textAdjust="ScaleFont" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="158" y="0" width="205" height="20" forecolor="#2B05FF" uuid="0294190b-9b9e-41b8-94ff-a954c0f29bb4">
+					<reportElement positionType="Float" x="158" y="0" width="205" height="12" forecolor="#2B05FF" uuid="0294190b-9b9e-41b8-94ff-a954c0f29bb4">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="e280b7e5-6ab4-4a67-b318-8e99c7579be5"/>
+						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2"/>
 					<textElement verticalAlignment="Middle" markup="none">
@@ -986,9 +965,8 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 +T("IMPORTO PAGATO - ")+new java.text.DecimalFormat("€ #,##0.00").format($F{payamt}) /*" DEL" + (new SimpleDateFormat("dd/MM/yyyy").format($F{paymentdate}))*/]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="ScaleFont" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="458" y="0" width="94" height="20" forecolor="#2B05FF" uuid="f45f6e58-74e4-49ca-9e2f-1a45a7c4c7fa">
+					<reportElement positionType="Float" x="363" y="0" width="95" height="12" forecolor="#2B05FF" uuid="16d376c0-ce90-44df-abc9-64c65473ffea">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="46f7af20-3217-48ff-8c73-9e211d64ce8d"/>
-						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -999,7 +977,22 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 					<textElement textAlignment="Right" verticalAlignment="Middle">
 						<font fontName="SansSerif" size="8" isBold="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{name}==("prepaid")?$V{Variable_1_2}.add($V{Variable_1_2_1}):$V{Variable_1_2}.add($V{Variable_1_2_1})]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{name}.equals("prepaid")?$F{allocationamt}:$F{allocationamt}]]></textFieldExpression>
+				</textField>
+				<textField textAdjust="ScaleFont" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
+					<reportElement positionType="Float" x="458" y="0" width="95" height="12" forecolor="#2B05FF" uuid="f45f6e58-74e4-49ca-9e2f-1a45a7c4c7fa">
+						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="46f7af20-3217-48ff-8c73-9e211d64ce8d"/>
+					</reportElement>
+					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement textAlignment="Right" verticalAlignment="Middle">
+						<font fontName="SansSerif" size="8" isBold="true"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{name}.equals(("prepaid"))?$V{Variable_1_2}.add($V{Variable_1_2_1}):$V{Variable_1_2}.add($V{Variable_1_2_1})]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
