--- a/821b.EstrattoConto/customerstatement821b.jrxml
+++ b/821b.EstrattoConto/customerstatement821b.jrxml
@@ -6,16 +6,7 @@
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w2" value="446"/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w1" value="123"/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w2" value="872"/>
-	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageHeight" value="mm"/>
-	<property name="com.jaspersoft.studio.unit.pageWidth" value="mm"/>
-	<property name="com.jaspersoft.studio.unit.topMargin" value="mm"/>
-	<property name="com.jaspersoft.studio.unit.bottomMargin" value="mm"/>
-	<property name="com.jaspersoft.studio.unit.leftMargin" value="mm"/>
-	<property name="com.jaspersoft.studio.unit.rightMargin" value="mm"/>
-	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="iDempiere"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="iDempiere Produzione"/>
 	<style name="Style1"/>
 	<parameter name="C_BPartner_ID" class="java.lang.Integer"/>
 	<parameter name="DateAcctFrom" class="java.util.Date"/>
@@ -72,14 +63,14 @@ doc.docbasetype,
 	  */
 inv.DESCRIPTION,
 CASE WHEN doc.docbasetype IN ('ARC','API') THEN
-	inv.GRANDTOTAL
+	 inv.GRANDTOTAL*-1
 ELSE
-	inv.GRANDTOTAL
+	ABS(inv.GRANDTOTAL)
 END AS "grandtotal",
 pay.payamt as payamt,
 --abb.amount - abb.overunderamt as payamt,
 CASE WHEN doc.docbasetype IN ('ARC','API') THEN
-  abb.Amount
+ ABS(abb.Amount)
 ELSE
   abb.Amount*-1
 END as AllocationAmt,
@@ -371,7 +362,7 @@ $V{grandtotal1}.add($V{allocationamt1})]]></variableExpression>
 				<frame>
 					<reportElement mode="Opaque" x="0" y="60" width="555" height="13" forecolor="#000000" backcolor="#6600CC" uuid="419fbf35-7f2d-4bfa-96a0-8ef81b986955"/>
 					<staticText>
-						<reportElement key="element-90" mode="Transparent" x="0" y="0" width="98" height="13" forecolor="#FFFFFF" backcolor="#D1D1D1" uuid="3c5ad42e-e5ae-4d14-951f-3e99ceb777df"/>
+						<reportElement key="element-90" mode="Transparent" x="0" y="0" width="60" height="13" forecolor="#FFFFFF" backcolor="#D1D1D1" uuid="3c5ad42e-e5ae-4d14-951f-3e99ceb777df"/>
 						<box leftPadding="2"/>
 						<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None" markup="none">
 							<font fontName="SansSerif" size="7" isBold="true"/>
@@ -380,7 +371,7 @@ $V{grandtotal1}.add($V{allocationamt1})]]></variableExpression>
 						<text><![CDATA[DATA]]></text>
 					</staticText>
 					<staticText>
-						<reportElement key="element-90" mode="Transparent" x="240" y="0" width="125" height="13" forecolor="#FFFFFF" backcolor="#D1D1D1" uuid="4fbfa410-6a76-407c-8331-5b775c449c2e"/>
+						<reportElement key="element-90" mode="Transparent" x="240" y="0" width="135" height="13" forecolor="#FFFFFF" backcolor="#D1D1D1" uuid="4fbfa410-6a76-407c-8331-5b775c449c2e"/>
 						<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None" markup="none">
 							<font fontName="SansSerif" size="7" isBold="true"/>
 							<paragraph lineSpacing="Single"/>
@@ -388,7 +379,7 @@ $V{grandtotal1}.add($V{allocationamt1})]]></variableExpression>
 						<text><![CDATA[NUM. DOC.]]></text>
 					</staticText>
 					<staticText>
-						<reportElement key="element-90" mode="Transparent" x="99" y="0" width="141" height="13" forecolor="#FFFFFF" backcolor="#D1D1D1" uuid="52fc601c-715e-415e-a31f-f9dcfbcec281"/>
+						<reportElement key="element-90" mode="Transparent" x="60" y="0" width="180" height="13" forecolor="#FFFFFF" backcolor="#D1D1D1" uuid="52fc601c-715e-415e-a31f-f9dcfbcec281"/>
 						<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None" markup="none">
 							<font fontName="SansSerif" size="7" isBold="true"/>
 							<paragraph lineSpacing="Single"/>
@@ -641,15 +632,15 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 	<group name="Documentno" keepTogether="true" preventOrphanFooter="true">
 		<groupExpression><![CDATA[$F{documentno}]]></groupExpression>
 		<groupHeader>
-			<band height="12" splitType="Stretch">
+			<band height="12" splitType="Immediate">
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
 				<printWhenExpression><![CDATA[!$F{name}.equals("prepaid")]]></printWhenExpression>
 				<frame>
-					<reportElement x="0" y="0" width="555" height="12" isRemoveLineWhenBlank="true" forecolor="#A30303" uuid="72b06c80-13c1-4365-af5c-6577e99d18b0"/>
+					<reportElement stretchType="ElementGroupHeight" x="0" y="0" width="555" height="12" isRemoveLineWhenBlank="true" forecolor="#A30303" uuid="72b06c80-13c1-4365-af5c-6577e99d18b0"/>
 					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="0"/>
-					<textField textAdjust="ScaleFont" pattern="" isBlankWhenNull="true">
-						<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="238" y="0" width="125" height="12" forecolor="#A30303" uuid="fa04fc64-763b-4278-b262-f8548907f1de">
+					<textField textAdjust="StretchHeight" pattern="" isBlankWhenNull="true">
+						<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="238" y="0" width="135" height="12" forecolor="#A30303" uuid="fa04fc64-763b-4278-b262-f8548907f1de">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 						</reportElement>
 						<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
@@ -660,12 +651,12 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 							<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						</box>
 						<textElement textAlignment="Left" verticalAlignment="Middle">
-							<font fontName="SansSerif" size="8" isBold="true"/>
+							<font fontName="DejaVu Sans" size="8" isBold="true"/>
 						</textElement>
 						<textFieldExpression><![CDATA[T($F{documentno})]]></textFieldExpression>
 					</textField>
 					<textField textAdjust="ScaleFont" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
-						<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="363" y="0" width="95" height="12" forecolor="#A30303" uuid="00fdfd03-bc9b-4126-bfbd-528d1de813a2">
+						<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="373" y="0" width="85" height="12" forecolor="#A30303" uuid="00fdfd03-bc9b-4126-bfbd-528d1de813a2">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 						</reportElement>
@@ -677,12 +668,12 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 							<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						</box>
 						<textElement textAlignment="Right" verticalAlignment="Middle">
-							<font fontName="SansSerif" size="8" isBold="true"/>
+							<font fontName="DejaVu Sans" size="8" isBold="true"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$F{grandtotal}]]></textFieldExpression>
 					</textField>
-					<textField textAdjust="ScaleFont">
-						<reportElement positionType="Float" x="68" y="0" width="170" height="12" forecolor="#A30303" uuid="fa49bc50-5017-4373-a5e4-37efaa99d322">
+					<textField textAdjust="StretchHeight">
+						<reportElement positionType="Float" x="58" y="0" width="180" height="12" forecolor="#A30303" uuid="fa49bc50-5017-4373-a5e4-37efaa99d322">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 						</reportElement>
 						<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
@@ -692,12 +683,12 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 							<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						</box>
 						<textElement verticalAlignment="Middle">
-							<font fontName="SansSerif" size="8" isBold="true"/>
+							<font fontName="DejaVu Sans" size="8" isBold="true"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$F{name}.equals(("prepaid")) ?T("SALDO RESIDUO") :$F{name}]]></textFieldExpression>
 					</textField>
 					<textField textAdjust="ScaleFont" pattern="dd-MM-yyyy" isBlankWhenNull="true">
-						<reportElement x="-2" y="0" width="70" height="12" forecolor="#A30303" uuid="d795050a-1aa9-4354-989a-f3aa6bdab1b9"/>
+						<reportElement x="-2" y="0" width="60" height="12" forecolor="#A30303" uuid="d795050a-1aa9-4354-989a-f3aa6bdab1b9"/>
 						<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 							<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 							<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -705,7 +696,7 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 							<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						</box>
 						<textElement verticalAlignment="Middle">
-							<font fontName="SansSerif" size="8" isBold="true"/>
+							<font fontName="DejaVu Sans" size="8" isBold="true"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$F{datetrx}]]></textFieldExpression>
 					</textField>
@@ -722,7 +713,7 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 							<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						</box>
 						<textElement textAlignment="Right" verticalAlignment="Middle">
-							<font fontName="SansSerif" size="8" isBold="true"/>
+							<font fontName="DejaVu Sans" size="8" isBold="true"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$V{Saldo_riga_doc_saldo_prec}==null?$F{grandtotal}:$F{grandtotal}.add($V{Saldo_riga_doc_saldo_prec})]]></textFieldExpression>
 					</textField>
@@ -916,13 +907,13 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="12" splitType="Stretch">
+		<band height="12" splitType="Immediate">
 			<printWhenExpression><![CDATA[$F{allocationamt}!=null]]></printWhenExpression>
 			<frame>
 				<reportElement x="0" y="0" width="555" height="12" isRemoveLineWhenBlank="true" forecolor="#2B05FF" uuid="03f95c77-dc20-450a-a234-5f147aa7f065"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="0"/>
-				<textField textAdjust="ScaleFont" pattern="dd-MM-yyyy" isBlankWhenNull="true">
-					<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="-2" y="0" width="70" height="12" forecolor="#2B05FF" uuid="69f8275c-3a01-416f-a02e-ca37417a1b3c">
+				<textField textAdjust="StretchHeight" pattern="dd-MM-yyyy" isBlankWhenNull="true">
+					<reportElement key="textField" positionType="Float" x="-2" y="0" width="60" height="12" forecolor="#2B05FF" uuid="69f8275c-3a01-416f-a02e-ca37417a1b3c">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
@@ -937,8 +928,8 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 					</textElement>
 					<textFieldExpression><![CDATA[$F{paymentdate}]]></textFieldExpression>
 				</textField>
-				<textField textAdjust="ScaleFont">
-					<reportElement key="textField" positionType="Float" stretchType="RelativeToTallestObject" x="68" y="0" width="90" height="12" forecolor="#2B05FF" uuid="ffc9aa24-a555-4801-89ce-c845525e5dd7"/>
+				<textField textAdjust="StretchHeight">
+					<reportElement key="textField" positionType="Float" x="58" y="0" width="70" height="12" forecolor="#2B05FF" uuid="ffc9aa24-a555-4801-89ce-c845525e5dd7"/>
 					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 						<pen lineWidth="0.25"/>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -951,21 +942,20 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 					</textElement>
 					<textFieldExpression><![CDATA[$F{paymentdoc}== null ? T("ABBINAMENTO") : $F{name}==("prepaid") ?T("PAGAMENTO NON ALLOCATO") : $F{paymentdoc}]]></textFieldExpression>
 				</textField>
-				<textField textAdjust="ScaleFont" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="158" y="0" width="205" height="12" forecolor="#2B05FF" uuid="0294190b-9b9e-41b8-94ff-a954c0f29bb4">
+				<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+					<reportElement positionType="Float" x="128" y="0" width="245" height="12" forecolor="#2B05FF" uuid="0294190b-9b9e-41b8-94ff-a954c0f29bb4">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="e280b7e5-6ab4-4a67-b318-8e99c7579be5"/>
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2"/>
 					<textElement verticalAlignment="Middle" markup="none">
-						<font fontName="SansSerif" size="8" isBold="true"/>
+						<font fontName="SansSerif" size="7" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{paymentdoc}==null ? " RIF.: " + T($F{inv2_documentno})/*  +" " +T($F{name})*/:
-"DOC. PAG. "+T($F{paymentdoc})+" - " +T($F{paymentdescription})  + ' ' + T($F{bank_name}) + "\n"
-+T("IMPORTO PAGATO - ")+new java.text.DecimalFormat("€ #,##0.00").format($F{payamt}) /*" DEL" + (new SimpleDateFormat("dd/MM/yyyy").format($F{paymentdate}))*/]]></textFieldExpression>
+"DOC. PAG. "+T($F{paymentdoc})+" - " +T($F{paymentdescription})  + ' ' + T($F{bank_name}) +"\n"+"IMPORTO PAGATO - "+ T(new java.text.DecimalFormat("€ #,##0.00").format($F{payamt})) /*" DEL" + (new SimpleDateFormat("dd/MM/yyyy").format($F{paymentdate}))*/]]></textFieldExpression>
 				</textField>
-				<textField textAdjust="ScaleFont" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="363" y="0" width="95" height="12" forecolor="#2B05FF" uuid="16d376c0-ce90-44df-abc9-64c65473ffea">
+				<textField textAdjust="StretchHeight" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
+					<reportElement positionType="Float" x="373" y="0" width="85" height="12" forecolor="#2B05FF" uuid="16d376c0-ce90-44df-abc9-64c65473ffea">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="46f7af20-3217-48ff-8c73-9e211d64ce8d"/>
 					</reportElement>
 					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
@@ -979,7 +969,7 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 					</textElement>
 					<textFieldExpression><![CDATA[$F{name}.equals("prepaid")?$F{allocationamt}:$F{allocationamt}]]></textFieldExpression>
 				</textField>
-				<textField textAdjust="ScaleFont" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
+				<textField textAdjust="StretchHeight" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
 					<reportElement positionType="Float" x="458" y="0" width="95" height="12" forecolor="#2B05FF" uuid="f45f6e58-74e4-49ca-9e2f-1a45a7c4c7fa">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="46f7af20-3217-48ff-8c73-9e211d64ce8d"/>
 					</reportElement>
